--- a/demo-app/index.html
+++ b/demo-app/index.html
@@ -215,7 +215,7 @@
 </nav>
 
 <div class="jumbotron text-center">
-  <h1>Demo App</h1> 
+  <h1>Demo App Update</h1> 
   <p>We specialize in blablabla</p> 
   <form>
     <div class="input-group">
